[gd_scene load_steps=3 format=3 uid="uid://bok4q1ulrp1b3"]

[ext_resource type="Script" uid="uid://ebtf4ji04hgl" path="res://Scripts/Tooltip.gd" id="1_ogi1g"]
[ext_resource type="Texture2D" uid="uid://jyixvpo15ykg" path="res://Assets/9patch.png" id="2_617o6"]

[node name="Tooltip" type="Control"]
custom_minimum_size = Vector2(173, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 173.0
offset_bottom = 200.0
script = ExtResource("1_ogi1g")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_617o6")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 1
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="ContentContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="Background/MarginContainer/ContentContainer"]
custom_minimum_size = Vector2(157, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.87451, 0.00784314, 1)
theme_override_font_sizes/font_size = 32
text = "TattooName"
horizontal_alignment = 1
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="Background/MarginContainer/ContentContainer"]
custom_minimum_size = Vector2(157, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "description       hEre"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
